--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "dependencies": {
     "axios": "^0.27.1",
     "he": "^1.2.0",
-    "jssoup": "^0.0.15",
-    "moment": "^2.29.3"
+    "jssoup": "^0.0.15"
   },
   "scripts": {
     "update": "node tools/update-sites.js",
