Add a -f option to CLI to force parsing using default processing
It allows to check quickly what should be added to support
a new website.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "axios": "^0.27.1",
     "he": "^1.2.0",
-    "jssoup": "^0.0.15"
+    "jssoup": "^0.0.15",
+    "yargs": "^17.5.1"
   },
   "scripts": {
     "update": "node tools/update-sites.js",
