--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.1",
     "he": "^1.2.0",
     "jssoup": "^0.0.15",
+    "npmlog": "^6.0.2",
     "yargs": "^17.5.1"
   },
   "scripts": {
